backend-master/karibu/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karibu
spec:
  replicas: $REPLICAS
  selector:
    matchLabels:
      app: karibu
  template:
    metadata:
      labels:
        app: karibu
        timestamp: "$TIMESTAMP"
    spec:
      containers:
        - name: karibu
          image: gcr.io/$GCP_PROJECT/karibu-$ENVIRONMENT_NAME:latest
          ports:
          - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
      tolerations:
        - key: "SERVICE_TYPE"
          operator: "Equal"
          value: "karibu"
          effect: "NoSchedule"
