backend-master/karibu/service.yml
apiVersion: v1
kind: Service
metadata:
  name: karibu-service-$ENVIRONMENT_NAME
  namespace: $ENVIRONMENT_NAME
spec:
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  selector:
    app: karibu
  type: NodePort
