backend-master/karibu/service_prod.yml
apiVersion: v1
kind: Service
metadata:
  name: karibu-service-production
spec:
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  selector:
    app: karibu
  type: NodePort
