backend-master/karibu/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karibu-ingress-$ENVIRONMENT_NAME
  namespace: $ENVIRONMENT_NAME
  annotations:
    kubernetes.io/ingress.global-static-ip-name: karibu-$ENVIRONMENT_NAME-ip
    networking.gke.io/managed-certificates: karibu-$ENVIRONMENT_NAME
spec:
  rules:
    - host: api.$ENVIRONMENT_NAME.syncari.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karibu-service-$ENVIRONMENT_NAME
                port:
                  number: 8081
